--- a/freeThrow.css
+++ b/freeThrow.css
@@ -23,3 +23,10 @@ video {
       margin: 2px 0px 8px 10px;
       font-weight: bold;
   }
+
+  .footer {
+    text-align: center;
+    padding: 20px 0;
+    color: #999;
+    font-size: .9rem;
+    }
